run bump always

--- a/.github/workflows/pr-version-bump.yml
+++ b/.github/workflows/pr-version-bump.yml
@@ -9,7 +9,7 @@ env:
 
 jobs:
   bump:
-    if: github.event.pull_request.head.repo.full_name == github.repository && github.actor != 'github-actions[bot]'
+    if: github.event.pull_request.head.repo.full_name == github.repository
     runs-on: macos-latest
     permissions:
       contents: write
@@ -78,6 +78,7 @@ jobs:
 
       - name: Commit version bump
         id: commit
+        if: github.actor != 'github-actions[bot]'
         run: |
           set -euo pipefail
           if git diff --quiet; then
@@ -93,6 +94,7 @@ jobs:
 
       - name: Update PR metadata block
         uses: actions/github-script@v7
+        if: github.actor != 'github-actions[bot]'
         with:
           script: |
             const { execFileSync } = require("child_process");
