Add format + build/run app scripts, zsh completions, revamped organization

--- a/.github/workflows/release-on-merge.yml
+++ b/.github/workflows/release-on-merge.yml
@@ -4,9 +4,6 @@ on:
   pull_request:
     types: [closed]
 
-env:
-  PBXPROJ_PATH: Saga/Saga.xcodeproj/project.pbxproj
-
 jobs:
   release:
     if: github.event.pull_request.merged == true
@@ -15,16 +12,15 @@ jobs:
       contents: write
     steps:
       - name: Checkout merged commit
-        uses: actions/checkout@v4
+        uses: ./.github/actions/ci-setup
         with:
           ref: ${{ github.event.pull_request.merge_commit_sha }}
-          fetch-depth: 0
 
       - name: Read version/build from project
         id: version
         run: |
           set -euo pipefail
-          read_output="$(swift scripts/versioning.swift read --path "$PBXPROJ_PATH")"
+          read_output="$(./run version-and-release read --path "$PBXPROJ_PATH")"
           version="$(echo "$read_output" | awk -F= '/^VERSION=/{print $2}')"
           build="$(echo "$read_output" | awk -F= '/^BUILD=/{print $2}')"
           if [[ -z "$version" || -z "$build" ]]; then
@@ -38,7 +34,7 @@ jobs:
         id: notes
         run: |
           set -euo pipefail
-          notes="$(swift scripts/versioning.swift extract-notes --event "$GITHUB_EVENT_PATH")"
+          notes="$(./run version-and-release extract-notes --event "$GITHUB_EVENT_PATH")"
           delimiter="NOTES_$(uuidgen)"
           {
             echo "notes<<$delimiter"
