--- a/.github/workflows/release-on-merge.yml
+++ b/.github/workflows/release-on-merge.yml
@@ -12,15 +12,16 @@ jobs:
       contents: write
     steps:
       - name: Checkout merged commit
-        uses: ./.github/actions/ci-setup
+        uses: actions/checkout@v4
         with:
           ref: ${{ github.event.pull_request.merge_commit_sha }}
+          fetch-depth: 0
 
       - name: Read version/build from project
         id: version
         run: |
           set -euo pipefail
-          read_output="$(./run version-and-release read --path "$PBXPROJ_PATH")"
+          read_output="$(./run version-and-release read --path "${{ vars.PBXPROJ_PATH }}")"
           version="$(echo "$read_output" | awk -F= '/^VERSION=/{print $2}')"
           build="$(echo "$read_output" | awk -F= '/^BUILD=/{print $2}')"
           if [[ -z "$version" || -z "$build" ]]; then
