--- a/.github/workflows/swift-format.yml
+++ b/.github/workflows/swift-format.yml
@@ -14,6 +14,9 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Install swift-format
+        run: brew install swift-format
+
       - name: Format and lint with swift-format
         run: |
           set -euo pipefail
