--- a/.github/workflows/swift-format.yml
+++ b/.github/workflows/swift-format.yml
@@ -1,12 +1,12 @@
-name: Swift format
+name: Swift
 
 on:
-  pull_request:
   push:
     branches: [main]
 
 jobs:
-  lint:
+  format:
+    name: 🎨 Format
     runs-on: macos-latest
     steps:
       - name: Checkout
@@ -14,11 +14,17 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Install swift-format
-        run: brew install swift-format
+      - name: Check formatting
+        uses: ./.github/actions/format
 
-      - name: Format and lint with swift-format
-        run: |
-          set -euo pipefail
-          ./run format
-          git diff --exit-code
+  lint:
+    name: 🔍 Lint
+    runs-on: macos-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Lint
+        uses: ./.github/actions/lint
