--- a/.github/workflows/pr-version-bump.yml
+++ b/.github/workflows/pr-version-bump.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   bump:
-    name: 📦 Bump Version
+    name: 📦 Bump version
     # Only run for same-repo PRs, not forks
     if: github.event.pull_request.head.repo.full_name == github.repository
     runs-on: macos-latest
