--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,7 @@ jobs:
         with:
           ref: ${{ github.head_ref }}
           fetch-depth: 0
+          token: ${{ secrets.PAT_FOR_ACTIONS }}
 
       - name: Fetch main
         run: git fetch origin main
@@ -87,7 +88,8 @@ jobs:
           git -c user.name="github-actions[bot]" \
             -c user.email="41898282+github-actions[bot]@users.noreply.github.com" \
             commit -m "Bump version to ${{ steps.bump.outputs.version_to }} (${{ steps.bump.outputs.build_to }})"
-          git push
+          git remote set-url origin "https://x-access-token:${{ secrets.PAT_FOR_ACTIONS }}@github.com/${{ github.repository }}.git"
+          git push origin "HEAD:${{ github.head_ref }}"
           echo "changed=true" >> "$GITHUB_OUTPUT"
 
       - name: Get HEAD SHA
