--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Bump version on PR
+name: CI
 
 on:
   pull_request:
@@ -6,18 +6,22 @@ on:
 
 jobs:
   bump:
+    name: 📦 Bump version
+    # Only run for same-repo PRs, not forks
     if: github.event.pull_request.head.repo.full_name == github.repository
     runs-on: macos-latest
     permissions:
       contents: write
       pull-requests: write
-      checks: write
+    outputs:
+      head-sha: ${{ steps.head.outputs.sha }}
     steps:
       - name: Checkout PR branch
         uses: actions/checkout@v4
         with:
           ref: ${{ github.head_ref }}
           fetch-depth: 0
+          token: ${{ secrets.PAT_FOR_ACTIONS }}
 
       - name: Fetch main
         run: git fetch origin main
@@ -84,41 +88,17 @@ jobs:
           git -c user.name="github-actions[bot]" \
             -c user.email="41898282+github-actions[bot]@users.noreply.github.com" \
             commit -m "Bump version to ${{ steps.bump.outputs.version_to }} (${{ steps.bump.outputs.build_to }})"
-          git push
-          new_sha="$(git rev-parse HEAD)"
-          echo "sha=$new_sha" >> "$GITHUB_OUTPUT"
+          git remote set-url origin "https://x-access-token:${{ secrets.PAT_FOR_ACTIONS }}@github.com/${{ github.repository }}.git"
+          git push origin "HEAD:${{ github.head_ref }}"
           echo "changed=true" >> "$GITHUB_OUTPUT"
 
-      - name: Create check for bumped commit
-        if: steps.commit.outputs.changed == 'true'
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const owner = context.repo.owner;
-            const repo = context.repo.repo;
-            const headSha = process.env.BUMP_SHA;
-            if (!headSha) {
-              core.warning("No bump SHA available, skipping check creation.");
-              return;
-            }
-            await github.rest.checks.create({
-              owner,
-              repo,
-              name: "bump",
-              head_sha: headSha,
-              status: "completed",
-              conclusion: "success",
-              output: {
-                title: "Version bump committed",
-                summary: "Version/build were updated by the workflow on this commit."
-              }
-            });
-        env:
-          BUMP_SHA: ${{ steps.commit.outputs.sha }}
+      - name: Get HEAD SHA
+        id: head
+        run: echo "sha=$(git rev-parse HEAD)" >> "$GITHUB_OUTPUT"
 
       - name: Update PR metadata block
-        uses: actions/github-script@v7
         if: github.actor != 'github-actions[bot]'
+        uses: actions/github-script@v7
         with:
           script: |
             const { execFileSync } = require("child_process");
@@ -144,3 +124,31 @@ jobs:
           VERSION_TO: ${{ steps.bump.outputs.version_to }}
           BUILD_FROM: ${{ steps.bump.outputs.build_from }}
           BUILD_TO: ${{ steps.bump.outputs.build_to }}
+
+  format:
+    name: 🎨 Format
+    needs: bump
+    runs-on: macos-latest
+    steps:
+      - name: Checkout PR branch
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ needs.bump.outputs.head-sha }}
+          fetch-depth: 0
+
+      - name: Check formatting
+        uses: ./.github/actions/format
+
+  lint:
+    name: 🔍 Lint
+    needs: bump
+    runs-on: macos-latest
+    steps:
+      - name: Checkout PR branch
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ needs.bump.outputs.head-sha }}
+          fetch-depth: 0
+
+      - name: Lint
+        uses: ./.github/actions/lint
