--- a/Saga/Saga.xcodeproj/xcshareddata/xcschemes/Saga.xcscheme
+++ b/Saga/Saga.xcodeproj/xcshareddata/xcschemes/Saga.xcscheme
@@ -29,6 +29,18 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "B20A17E4FF1C44608D0FD6B1"
+               BuildableName = "SagaUITests.xctest"
+               BlueprintName = "SagaUITests"
+               ReferencedContainer = "container:Saga.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
