--- a/.github/actions/format/action.yml
+++ b/.github/actions/format/action.yml
@@ -9,9 +9,9 @@ outputs:
 runs:
   using: composite
   steps:
-    - name: Install swift-format
+    - name: Install dependencies
       shell: bash
-      run: brew install swift-format
+      run: brew bundle
 
     - name: Check formatting
       id: run_format
