Fixing hot reload to work with InjectionNext + document it

--- a/Saga/Saga.xcodeproj/xcshareddata/xcschemes/Saga.xcscheme
+++ b/Saga/Saga.xcodeproj/xcshareddata/xcschemes/Saga.xcscheme
@@ -62,6 +62,13 @@
             ReferencedContainer = "container:Saga.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "INJECTION_PROJECT_ROOT"
+            value = "$(SRCROOT)"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
